@@ -3,6 +3,7 @@
 * Ruote remote participants
 * Allow process umask to be configured, defaults to 022
 * Updates to DaemonKit::Config hashes
+* Fixed argument parsing bug (reported by Mathijs Kwik (bluescreen303)
 
 == 0.1.7.9 2009-06-22
 
